--- a/EmployeeMS/EmployeeMS/src/main/resources/application.properties
+++ b/EmployeeMS/EmployeeMS/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/EmployeeMS?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=foreverSmile@912
+spring.datasource.password= : )
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
